--- a/src/components/screen.css
+++ b/src/components/screen.css
@@ -1,7 +1,7 @@
 html
 {
-	margin: 0;
-	padding: 0;
+	margin: 5px;
+	padding: 5px;
 	color: #aaaaaa;
 	background-color: #FFFFFF;
 	font: normal 12px "Trebuchet MS", "Lucida Grande", Verdana, Georgia, Sans-Serif;
@@ -17,44 +17,44 @@ a:hover, a:active { color: #dd5555; }
 
 /* Html Elements */
 
-h1, h2, h3, h4, h5, h6 { font-weight: normal; margin: 0; padding: 10px 0; color: #779955; }
+h1, h2, h3, h5, h6 { font-weight: normal; margin: 0; padding: 10px 0; color: #779955; }
 
-h1 { font-size: 32px; }
+h1 { font-size: 32px;  }
 
 h2 { font-size: 28px; }
 
 h3 { font-size: 24px; }
 
-h4 { font-size: 20px; }
+h4 { font-size: 20px; font-weight: bold; alignment: center;
+	border: 4px solid rgb(85, 145, 146); height: 33px; background-color: rgb(85, 145, 146);
+	color: white; }
 
 h5, h6 { font-size: 17px; }
 
 ul, ol, dl, blockquote, pre
 {
-	color: #FFFFFF;
-	margin: 10px 35px; 
-	padding: 10px 30px; 
+	color: #151515;
+	margin: 10px 20px;
+	padding: 10px 10px;
 	line-height: 1.6em;
-	border: 1px solid #1a1a1a;
-	border-top: 10px solid #151515;
-	background: #FFFFFF url(images/navigation_hover.gif) top left repeat;
+	/*background: #FFFFFF url(images/navigation_hover.gif) top left repeat;*/
 }
 
 p { margin: 0; }
 
-ul { list-style-type: square; } 
+ul { list-style-type: square; }
 
 dt
 {
 	margin: 0;
 	color: #7799bb;
-	font-size: 10px; 
+	font-size: 16px;
 	font-weight: bold;
-	padding: 10px 0 2px; 
-	text-transform: uppercase; 
+	padding: 10px 0 2px;
+	text-transform: uppercase;
 }
 
-dd { margin: 0; padding: 2px 0 5px; margin-bottom: 5px; border-bottom: 1px dotted #555555; }
+dd { margin: 0; padding: 2px 0 5px; font-size: 12px; margin-bottom: 5px; border-bottom: 1px dotted #555555; }
 
 dd.last { border-bottom-width: 0; }
 
@@ -70,7 +70,7 @@ strong { font-weight: bold; }
 
 ins { color: #999999; text-decoration: none; padding-left: 20px; background: transparent url(images/information.png) center left no-repeat; }
 
-del { text-decoration: line-through; } 
+del { text-decoration: line-through; }
 
 blockquote { text-align: right; }
 
@@ -84,33 +84,36 @@ body
 {
 	margin: 0;
 	float: left;
-	width: 100%; 
+
+	width: 100%;
 }
 
 #wrapper
 {
 	clear: both;
+
 	float: left;
 	width: 100%;
-	margin: 10px 0; 
-	background: transparent url(images/hr_dotted.gif) 60% 0 repeat-y; 
+	margin: 10px 0;
+	background: transparent url(images/hr_dotted.gif) 60% 0 repeat-y;
 }
 
 #content-wrapper
 {
 	width: 60%;
+
 	float: left;
 }
 
 #content
 {
-	float: left;
+
 	padding: 0 20px;
 }
 
 /* Header */
 
-#header h1 { padding: 20px; }
+#header h1 { padding: 20px;  }
 
 /* Navigation */
 
@@ -122,15 +125,15 @@ body
 {
 	float: left;
 	display: block;
-	padding: 5px 10px; 
+	padding: 5px 10px;
 }
 
 #navigation a:link,
 #navigation a:visited
 {
-	color: #002244; 
-	font-weight: bold; 
-	text-transform: uppercase; 
+	color: #002244;
+	font-weight: bold;
+	text-transform: uppercase;
 }
 
 #navigation a:hover,
@@ -143,37 +146,37 @@ body
 li#lhome a:hover,
 li#lhome a:active
 {
-	background-position: 0 -3px; 
+	background-position: 0 -3px;
 }
 
 li#lproducts a:hover,
 li#lproducts a:active
 {
-	background-position: 0 1px; 
+	background-position: 0 1px;
 }
 
 li#lsolutions a:hover,
 li#lsolutions a:active
 {
-	background-position: 0 2px; 
+	background-position: 0 2px;
 }
 
 li#lmysterious a:hover,
 li#lmysterious a:active
 {
-	background-position: 0 -1px; 
+	background-position: 0 -1px;
 }
 
 li#labout a:hover,
 li#labout a:active
 {
-	background-position: 0 -2px; 
+	background-position: 0 -2px;
 }
 
 li#lcontact a:hover,
 li#lcontact a:active
 {
-	background-position: 0 -3px; 
+	background-position: 0 -3px;
 }
 
 body#babout li#labout a
@@ -187,19 +190,19 @@ body#babout li#labout a
 #sidebar p
 {
 	color: #999999;
-	margin: 10px 35px; 
-	padding: 5px 30px; 
+	margin: 10px 35px;
+	padding: 5px 30px;
 	line-height: 1.6em;
 	border: 1px solid #1a1a1a;
 	border-top: 10px solid #151515;
-	background: #404040 url(images/navigation_hover.gif) top left repeat;
+	background: #999999 url(images/navigation_hover.gif) top left repeat;
 }
 
 /* Footer */
 
 #footer p { margin: 15px 0; }
 
-#footer a:link { color: #888888; font-weight: bold; border-bottom: 1px dotted #888888; } 
+#footer a:link { color: #888888; font-weight: bold; border-bottom: 1px dotted #888888; }
 
 #footer a:visited { color: #666666; font-weight: bold; border-bottom: 1px dotted #666666; }
 
