--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,10 +1,7 @@
 .navbar {
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     background: rgb(85, 145, 146);
-    height: 56px;
 }
 
 .navbar_navigation {
@@ -24,21 +21,18 @@
 .search_bar {
     position: relative;
     left: 30rem;
-    width: 45%;
+    width: 40%;
     font-size: 10px;
 
 }
 
 .navbar_button {
     position: relative;
-    left: 40rem;
-    color: white;
+    left: 30rem;
+    width: 40rem;
 }
 
-.navbar_button a {
 
-    color: white;
-}
 
 .SignUp {
     position: relative;
@@ -48,8 +42,7 @@
 .btn {
     outline: none !important;
    box-shadow: none;
-    background: rgb(85, 145, 146);
-    border-color: rgb(85, 145, 146);
+
 }
 .btn:focus {
     outline: none !important;
@@ -61,3 +54,8 @@
    box-shadow: none;
 
 }
+
+.user_session {
+    width: 70rem;
+}
+
