--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,7 +1,9 @@
 .navbar {
-    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     background: rgb(85, 145, 146);
+    height: 56px;
 }
 
 .navbar_navigation {
@@ -21,18 +23,21 @@
 .search_bar {
     position: relative;
     left: 30rem;
-    width: 40%;
+    width: 45%;
     font-size: 10px;
 
 }
 
 .navbar_button {
     position: relative;
-    left: 30rem;
-    width: 40rem;
+    left: 40rem;
+    color: white;
 }
 
+.navbar_button a {
 
+    color: white;
+}
 
 .SignUp {
     position: relative;
@@ -42,7 +47,8 @@
 .btn {
     outline: none !important;
    box-shadow: none;
-
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
 }
 .btn:focus {
     outline: none !important;
@@ -54,8 +60,3 @@
    box-shadow: none;
 
 }
-
-.user_session {
-    width: 70rem;
-}
-
