--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -47,8 +47,8 @@
 .btn {
     outline: none !important;
    box-shadow: none;
-    background: rgb(85, 145, 146);
-    border-color: rgb(85, 145, 146);
+    /*background: rgb(85, 145, 146);*/
+    /*border-color: rgb(85, 145, 146);*/
 }
 .btn:focus {
     outline: none !important;
