--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -20,14 +20,6 @@
 
 }
 
-.search_bar {
-    position: relative;
-    left: 30rem;
-    width: 45%;
-    font-size: 10px;
-
-}
-
 .navbar_button {
     position: relative;
     left: 40rem;
@@ -44,19 +36,51 @@
     left: 1rem;
 }
 
-.btn {
+.btn:hover {
     outline: none !important;
    box-shadow: none;
-    /*background: rgb(85, 145, 146);*/
-    /*border-color: rgb(85, 145, 146);*/
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
+
 }
+
+.btn {
+    outline: none !important;
+    box-shadow: none;
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
+}
+
 .btn:focus {
     outline: none !important;
    box-shadow: none;
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
 
 }
 .btn:active {
     outline: none !important;
    box-shadow: none;
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
 
+}
+
+.dropdownb {
+    position: relative;
+    left: 2rem;
+}
+
+.btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .open>.dropdown-toggle.btn-default.focus, .open>.dropdown-toggle.btn-default:focus, .open>.dropdown-toggle.btn-default:hover {
+    outline: none !important;
+    box-shadow: none;
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
+}
+
+.btn-group.open .dropdown-toggle {
+    outline: none !important;
+    box-shadow: none;
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
 }
