--- a/frontend/src/components/screen.css
+++ b/frontend/src/components/screen.css
@@ -25,9 +25,12 @@ h2 { font-size: 28px; }
 
 h3 { font-size: 24px; }
 
-h4 { font-size: 20px; font-weight: bold; alignment: center;
-	border: 4px solid rgb(85, 145, 146); height: 33px; background-color: rgb(85, 145, 146);
-	color: white; }
+#content h4 { font-size: 20px; font-weight: bold; alignment: center;
+	border: 4px solid rgb(85, 145, 146);
+    height: 33px;
+    background-color: rgb(85, 145, 146);
+	color: white;
+}
 
 h5, h6 { font-size: 17px; }
 
@@ -42,7 +45,6 @@ ul, ol, dl, blockquote, pre
 
 p { margin: 0; }
 
-ul { list-style-type: square; }
 
 dt
 {
