--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -85,3 +85,10 @@
     background: rgb(85, 145, 146);
     border-color: rgb(85, 145, 146);
 }
+
+.btn1.active, .btn1:active, .open>.dropdown-toggle.btn1 {
+    outline: none !important;
+    box-shadow: none;
+    background: rgb(85, 145, 146);
+    border-color: rgb(85, 145, 146);
+}
